[project]
name = "carprice"
version = "0.1.0"
description = "CLI tool to find car prices across multiple sources"
requires-python = ">=3.9"
dependencies = [
    "requests>=2.31",
    "beautifulsoup4>=4.12",
    "lxml>=5.0",
    "undetected-chromedriver>=3.5",
    "selenium>=4.15",
    "rich>=13.0",
    "pgeocode>=0.4",
    "click>=8.1",
]

[project.scripts]
carprice = "carprice.cli:main"

[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"
